Created /file endpoints allowing txt/png/jpg/doc/pdf file upload/download/deletion
