# swagger_server/models/file_body.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class FileBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, file: str=None):  # noqa: E501
+        """FileBody - a model defined in Swagger
+
+        :param file: The file of this FileBody.  # noqa: E501
+        :type file: str
+        """
+        self.swagger_types = {
+            'file': str
+        }
+
+        self.attribute_map = {
+            'file': 'file'
+        }
+        self._file = file
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'FileBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The file_body of this FileBody.  # noqa: E501
+        :rtype: FileBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def file(self) -> str:
+        """Gets the file of this FileBody.
+
+
+        :return: The file of this FileBody.
+        :rtype: str
+        """
+        return self._file
+
+    @file.setter
+    def file(self, file: str):
+        """Sets the file of this FileBody.
+
+
+        :param file: The file of this FileBody.
+        :type file: str
+        """
+
+        self._file = file
