# swagger_server/models/file_body1.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class FileBody1(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, file: str=None):  # noqa: E501
+        """FileBody1 - a model defined in Swagger
+
+        :param file: The file of this FileBody1.  # noqa: E501
+        :type file: str
+        """
+        self.swagger_types = {
+            'file': str
+        }
+
+        self.attribute_map = {
+            'file': 'file'
+        }
+        self._file = file
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'FileBody1':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The file_body_1 of this FileBody1.  # noqa: E501
+        :rtype: FileBody1
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def file(self) -> str:
+        """Gets the file of this FileBody1.
+
+
+        :return: The file of this FileBody1.
+        :rtype: str
+        """
+        return self._file
+
+    @file.setter
+    def file(self, file: str):
+        """Sets the file of this FileBody1.
+
+
+        :param file: The file of this FileBody1.
+        :type file: str
+        """
+
+        self._file = file
